# gcm-mcp-server

./: .bobignore  .gitignore  Dockerfile  GCM-MCP-EXAMPLE-PROMPTS.md  GCM_Comprehensive_Audit_Report_2026-03-13.md  README-MCP-SETUP.md  README.md  env.example  mcp-config.json  pyproject.toml  requirements.txt  run.py
.github/workflows/: build-push.yml
example_reports/: GCMCryptoPostureDashboard.md
src/: __init__.py  __main__.py  api.py  auth.py  client.py  config.py  discovery.py  keystore.py  server.py  tools.py
