[project]
name = "gcm-mcp-server"
version = "1.0.0"
description = "IBM Guardium Cryptographic Manager MCP Server"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "urllib3>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "starlette>=0.38.0",
    "uvicorn[standard]>=0.24.0",
    "fastapi>=0.104.0",
]
